<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">REVAL</string>
    <string name="reval_logo_image">Reval logo image</string>
    <string name="student_login">ZALOGUJ SIĘ JAKO STUDENT</string>
    <string name="admin_login">ZALOGUJ SIĘ JAKO ADMIN</string>
    <string name="empty_index">Nr indeksu nie może być pusty</string>
    <string name="empty_password">Hasło nie może być puste</string>
    <string name="short_password">Hasło musi mieć przynajmniej 8 znaków</string>
    <string name="prompt_index">Wpisz swój indeks</string>
    <string name="prompt_login">Wpisz swój login</string>
    <string name="prompt_password">Wpisz hasło</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_error_message">Błędny login lub hasło</string>
    <string name="log_out">Wyloguj</string>
    <string name="last_questions">Ostatnie zadania</string>

    <string name="question_item_icon">Ikona zadania</string>
    <string name="question">Zadanie:</string>
    <string name="subject">Przedmiot:</string>
    <string name="topic">Temat:</string>
    <string name="last_activity">Ostatnia aktywność:</string>
    <string name="question_content">Treść zadania:</string>
    <string name="apply_filter">Zastosuj filtry</string>
    <string name="filter_search">Szukaj</string>
    <string name="select_subject">Wybierz przedmiot</string>
    <string name="select_topic">Wybierz temat</string>
    <string name="add_question">Dodaj zadanie</string>
    <string name="add_question_progress">Dodawanie zadania&#8230;</string>
    <string name="check_unique">Sprawdź unikalność</string>
    <string name="pubDate">Data:</string>
    <string name="student">Uczeń:</string>
    <string name="similarity">Stopień podobieństwa:</string>
    <string name="answers">Odpowiedzi</string>
    <string name="write_question_conent">Wpisz treść zadania</string>
    <string name="question_title">Tytuł zadania:</string>
    <string name="answer">Odpowiedź:</string>
    <string name="answer_page">Strona odpowiedzi</string>
    <string name="your_answer">Twoja odpowiedź</string>
    <string name="admin_label">ADMIN</string>
    <string name="navigation_drawer_open">Otwórz panel nawigacji</string>
    <string name="navigation_drawer_close">Zamknij panel nawigacji</string>
    <string name="answer_progress">Ładowanie odpowiedzi&#8230;</string>
    <string name="question_progress">Ładowanie zadań&#8230;</string>
    <string name="question_page">Strona zadania</string>
    <string name="sign_progress">Logowanie&#8230;</string>
    <string name="rate_answer">Oceń odpowiedź</string>
    <string name="current_rating">Oceniono na: </string>
    <string name="no_data">Brak danych</string>
    <string name="answers_report">Raport odpowiedzi</string>
    <string name="max_points">Maksymalna ilość punktów:</string>
</resources>
