<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    style="@style/AppTheme.DefaultActivityPadding.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.amu.wmi.reval.user.activity.SignInActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:contentDescription="@string/reval_logo_image"
            android:src="@drawable/ic_action_shield" />

        <TextView
            style="@style/AppTheme.CenterLoginTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/student_login_button"
            style="@style/AppTheme.ButtonStyle.LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/student_login" />

        <Button
            android:id="@+id/admin_login_button"
            style="@style/AppTheme.ButtonStyle.LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/admin_login" />
    </LinearLayout>


</FrameLayout>
