<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.edu.amu.wmi.reval.question.AddQuestionActivity">
    <!--style="@style/AppTheme.DefaultActivityPadding"-->
    <include layout="@layout/subject_topic_layout" />

    <LinearLayout
        style="@style/AppTheme.Well.ListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/well_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/subject_question_icon"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:contentDescription="@string/question_item_icon"
                android:src="@drawable/question_item_icon"
                android:tint="@color/icon_tint" />

            <TextView
                style="@style/AppTheme.PageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/question" />
        </LinearLayout>

        <EditText
            android:id="@+id/question_content"
            style="@style/AppTheme.WellEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_question_conent"
            android:inputType="textMultiLine"
            android:maxLength="@integer/long_text_length" />

    </LinearLayout>

    <Button
        android:id="@+id/add_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="12dp"
        android:text="@string/add_question" />

</LinearLayout>
