<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_answer_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.edu.amu.wmi.reval.answer.page.AdminAnswerPageActivity">

    <include layout="@layout/fragment_answer" />

    <LinearLayout
        style="@style/AppTheme.Well.ListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/well_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/subject_question_icon"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:contentDescription="@string/question_item_icon"
                android:src="@drawable/question_item_icon"
                android:tint="@color/icon_tint" />

            <TextView
                android:id="@+id/question"
                style="@style/AppTheme.PageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/answer" />
        </LinearLayout>

        <TextView
            android:id="@+id/answer_content"
            style="@style/AppTheme.WellEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/rate_button"
        style="@style/AppTheme.ButtonStyle.Floating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_answer" />

</LinearLayout>

